--- a/MusicApp/app/src/main/res/layout/activity_main.xml
+++ b/MusicApp/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,38 +13,76 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardElevation="4dp"
-        android:layout_margin="16dp">
-    <TextView
-        android:id="@+id/artists"
-        style="@style/CategoryStyle"
-        android:background="@color/blue"
-        android:text="@string/artists" />
+        android:layout_margin="16dp"
+        card_view:cardElevation="4dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/artists"
+                style="@style/CategoryStyle"
+                android:background="@color/blue"
+                android:text="@string/artists" />
+
+            <TextView
+                style="@style/DescriptionStyle"
+                android:text="@string/artists_description" />
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardElevation="4dp"
-        android:layout_margin="16dp">
-        <TextView
-            android:id="@+id/albums"
-            style="@style/CategoryStyle"
-            android:background="@color/yellow"
-            android:text="@string/albums" />
+        android:layout_margin="16dp"
+        card_view:cardElevation="4dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/albums"
+                style="@style/CategoryStyle"
+                android:background="@color/yellow"
+                android:text="@string/albums" />
+
+            <TextView
+                style="@style/DescriptionStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/albums_description" />
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardElevation="4dp"
-        android:layout_margin="16dp">
-        <TextView
-            android:id="@+id/playlists"
-            style="@style/CategoryStyle"
-            android:background="@color/green"
-            android:text="@string/playlists" />
+        android:layout_margin="16dp"
+        card_view:cardElevation="4dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/playlists"
+                style="@style/CategoryStyle"
+                android:background="@color/green"
+                android:text="@string/playlists" />
+
+            <TextView
+                style="@style/DescriptionStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/playlists_description" />
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
+</ScrollView>
