--- a/MusicApp/app/src/main/res/values/styles.xml
+++ b/MusicApp/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
 
-    <!-- Style for a category of vocabulary words -->
+    <!-- Style for a activity category -->
     <style name="CategoryStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/list_item_height</item>
@@ -17,6 +17,19 @@
         <item name="android:padding">16dp</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textAppearance">?android:textAppearanceMedium</item>
+    </style>
+
+
+    <!-- Style for activity description -->
+    <style name="DescriptionStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/primary_light</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textStyle">italic</item>
         <item name="android:textAppearance">?android:textAppearanceMedium</item>
     </style>
 
